--- a/styles.css
+++ b/styles.css
@@ -12,32 +12,210 @@
 /* purple: #E3AFE8 */
 /* light purple: #F8E7F1 */
 
-/* orange: #FDDFCB */
-/* light orange: #FA914D */
+/* orange:  #FDDFCB */
+/* light orange: #FFE0CD */
 
 /* text: #545454 */
-/* background: #FFF */
+/* background: #FFF9F4 */
+/* completed task: #A6A6A6 */
 
+/* GENERAL */
 
 * {
   color: #545454;
   font-family: 'Open Sans', sans-serif;
+  /* border: 2px solid black; */
 }
 
-.accent-box {
-  height: 30px;
-  width: 45%;
-  border-radius: 10px;
+body {
+  background-color: #FFF9F4;
 }
 
-.title-accent {
+/* HEADER */
+
+header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+  padding: 0 20px;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+.filter-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #F8E7F1;
+  border-radius: 25px;
+  padding: 20px;
+}
+
+.filter-container label {
+  margin: 0;
+  margin-right: 4px;
+}
+
+.filter-container select {
+  width: 200px;
+}
+
+/* FORM */
+
+form {
+  background-color: #FEF2CE;
+  border-radius: 25px;
+  padding: 15px;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 15px;
+}
+
+.form-container,
+.form-button-container {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+}
+
+input,
+select,
+form button {
+  border: none;
+  font-size: 16px;
+  height: 40px;
+  width: 100%;
+}
+
+form button {
+  background-color: #A8CBFD;
+  letter-spacing: 1px;
+}
+
+.form-button-container {
+  height: 68px;
+  justify-content: flex-end;
+}
+
+label {
+  margin-bottom: 5px;
+}
+
+/* DAYS */
+
+main {
+  display: flex;
+  justify-content: space-around;
+}
+
+article {
+  width: 18%;
+}
+
+/* DAYS TITLES */
+
+h2 {
+  position: absolute;
+  width: 18%;
+  color: white;
+  text-align: center;
+  padding: 15px 0px;
+  font-size: 16px;
+  font-weight: 800;
+  letter-spacing: 2px;
+  border-radius: 25px;
+}
+
+.monday-title {
+  background-color: #F9614E;
+}
+
+.tuesday-title {
+  background-color: #A8CBFD;
+}
+
+.wednesday-title {
+  background-color: #FDD875;
+}
+
+.thursday-title {
+  background-color: #E3AFE8;
+}
+
+.friday-title {
+  background-color: #FF914D;
+}
+
+/* DAYS TASKS CONTAINERS */
+
+.task-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.monday-task-container {
   background-color: #FDD3CB;
 }
 
-.filter-accent {
- background-color: #EAEEF6;
+.tuesday-task-container {
+  background-color: #EAEEF6;
 }
 
-h2 {
-  color: white;
+.wednesday-task-container {
+  background-color: #FEF2CE;
+}
+
+.thursday-task-container {
+  background-color: #F8E7F1;
+}
+
+.friday-task-container {
+  background-color: #FFE0CD;
+}
+
+/* TASK CARDS */
+
+.task-card {
+  background-color: white;
+  width: 90%;
+  margin: 10px 0;
+  text-align: center;
+  padding: 15px 0;
+}
+
+.task-card:nth-child(1) {
+  margin-top: 40px;
+}
+
+.task-card p {
+  margin-bottom: 0;
+}
+
+.task-card button {
+  border: none;
+  background-color: white;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+.task-card div {
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* COMPLETED TASK */
+
+.completed-task-card,
+.completed-task-card button {
+  background-color: #A6A6A6;
+}
+
+.completed-task-card p {
+  text-decoration: line-through;
 }
