--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,11 @@ body {
   background-color: #FFF9F4;
 }
 
+button:hover,
+select:hover {
+  cursor: pointer;
+}
+
 /* HEADER */
 
 header {
@@ -197,7 +202,7 @@ h2 {
   margin-bottom: 0;
 }
 
-.task-card button {
+.toggle-task-button {
   border: none;
   background-color: white;
   font-size: 16px;
@@ -211,11 +216,11 @@ h2 {
 
 /* COMPLETED TASK */
 
-.completed-task-card,
-.completed-task-card button {
+.completed,
+.completed button {
   background-color: #A6A6A6;
 }
 
-.completed-task-card p {
+.completed p {
   text-decoration: line-through;
 }
